--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									</div>
 									<div class="description">
 										<h4>Collaboration</h4>
-										<p>Meet people that as passionate as you are. Get advice, mentorship and maybe you'll find someone to help with your next project.
+										<p>Meet people that are as passionate as you are. Get advice, mentorship and maybe you'll find someone to help with your next project.
 										</p>
 									</div>
 								</div>
