--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
 							<div class="form-group">
-								<a href="http://www.meetup.com/Hack-Provo/events/209493162/" target="_blank"><button type="submit" href="http://www.meetup.com/Hack-Provo/events/209493162/" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
+								<a href="http://goo.gl/8pwqyU" target="_blank"><button type="submit" href="http://goo.gl/8pwqyU" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
 							</div></a>
 						</form>
 						<footer class="text-center top-social">
