--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 						<img class="logo" src="img/logo/logo.png" alt="Logo">
 						<h2 class="heading">Next Event</h2>
 						<p class="top-p">
-							<h2><strong>Sponsored by:</strong> <a href="http://verisage.us">Verisage</a>, <a href="http://codingcamp.us">Coding Campus</a> and <a href="https://www.facebook.com/startupdojo">Startup Dojo!</a></h2>
-						</p>
+							<h2><strong>Generously Sponsored this week by:</strong> <a href="http://devmounta.in">DevMounta.in</a></p>
 						<div class="row">
 							<div id="countdown"></div>
 						</div>
@@ -53,7 +52,7 @@
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
 							<div class="form-group">
-								<a href="http://goo.gl/8pwqyU" target="_blank"><button type="submit" href="http://goo.gl/8pwqyU" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
+								<a href="http://goo.gl/8pwqyU" target="_blank"><button type="submit" href="http://goo.gl/j4csE9" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
 							</div></a>
 						</form>
 						<footer class="text-center top-social">
