--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<img class="logo" src="img/logo/logo.png" alt="Logo">
 						<h2 class="heading">Next Event</h2>
 						<p class="top-p">
-							<h2><strong>Generously Sponsored this week by:</strong> <a href="http://devmounta.in">DevMounta.in</a></p>
+							<h2><strong>Generously Sponsored this week by:</strong> <a href="http://devmounta.in" target="_blank">DevMounta.in</a></p>
 						<div class="row">
 							<div id="countdown"></div>
 						</div>
