--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Windy Hack | Chicago Meetup">
-		<meta name="author" content="PJ Targun">
+		<meta name="description" content="Hack Provo | Provo Meetup">
+		<meta name="author" content="Brock Neilson">
 		<title>Hack Provo</title>
 		
 		<!-- Stylesheets -->
@@ -52,7 +52,7 @@
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
 							<div class="form-group">
-								<a href="http://goo.gl/8pwqyU" target="_blank"><button type="submit" href="http://goo.gl/j4csE9" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
+								<button type="submit" href="http://goo.gl/j4csE9" target="_blank" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
 							</div></a>
 						</form>
 						<footer class="text-center top-social">
