--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
 							<div class="form-group">
-								<a href="goo.gl/j4csE9" target="_blank"><button type="submit" href="http://goo.gl/j4csE9" target="_blank" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
+								<a href="goo.gl/j4csE9" target="_blank"><button type="submit" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
 							</div></a>
 						</form>
 						<footer class="text-center top-social">
