--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<img class="logo" src="img/logo/logo.png" alt="Logo">
 						<h2 class="heading">Next Event</h2>
 						<p class="top-p">
-							<h2><strong>Generously Sponsored this week by:</strong> <a href="http://devmounta.in" target="_blank">DevMounta.in</a></p>
+							<h2><strong>Generously Sponsored this week by:</strong> <a href="http://izeni.com" target="_blank">Izeni</a></p>
 						<div class="row">
 							<div id="countdown"></div>
 						</div>
@@ -52,7 +52,7 @@
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
 							<div class="form-group">
-								<a href="http://goo.gl/lEBu7A" target="_blank"><button type="submit" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
+								<a href="http://goo.gl/ErzPm3" target="_blank"><button type="submit" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
 							</div></a>
 						</form>
 						<footer class="text-center top-social">
