--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 							<div class="form-group">
 								<input type="email" name="email" class="form-control" placeholder="Email address">
 							</div> -->
-							<div class="form-group">
+							<!--<div class="form-group">
 								<a href="http://goo.gl/ErzPm3" target="_blank"><button type="submit" class="btn btn-theme ladda-button" data-style="expand-left"><span class="ladda-label">RSVP Here!</span></button>
-							</div></a>
+							</div></a> -->
 						</form>
 						<footer class="text-center top-social">
 							<div class="social">
