--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<img class="logo" src="img/logo/logo.png" alt="Logo">
 						<h2 class="heading">Next Event</h2>
 						<p class="top-p">
-							<h2><strong>Generously Sponsored this week by:<br/> </strong><a href="http://izeni.com" target="_blank"><img src="img/logo/izeni.png"></a> &amp; <a href="http://pluralsight.com" target="_blank"><img src="img/logo/pluralsight.png"></a> </p>
+							<h2><strong>Generously Sponsored by:<br/> </strong><a href="http://izeni.com" target="_blank"><img src="img/logo/izeni.png"></a> &amp; <a href="http://pluralsight.com" target="_blank"><img src="img/logo/pluralsight.png"></a> </p>
 						<div class="row">
 							<div id="countdown"></div>
 						</div>
